# DownloaderHydro

./: .gitignore
webapp/: .gitignore  README.md
webapp/backend/: .env.example  .gitignore  README.md  pyproject.toml
webapp/backend/app/: main.py  schemas.py  settings.py  vendor.py
webapp/backend/app/lib/delineator/: merit_detailed.py  raster_plots.py
webapp/backend/app/routers/: auth.py  delineate.py  downloads.py  jobs.py  stations.py
webapp/backend/app/services/: ana.py  delineate.py  jobs.py
webapp/backend/app/services/catchments/: base.py  shapefile.py
webapp/backend/tests/: test_smoke.py
webapp/frontend/: index.html  package-lock.json  package.json  tsconfig.json
webapp/frontend/src/: api.ts  main.ts  map.ts  styles.css
webapp/scripts/: build_ana_inventory.py  prepare_merit_sa.md
