[project]
name = "downloaderhydro-backend"
version = "0.1.0"
description = "Backend do DownloaderHydro — delineação de bacias + integração com Swagger-ANA"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pysheds>=0.3.5",
    "numpy>=1.26",
    "pandas>=2.1",
    "sigfig>=1.3",
    "huey>=2.5",
    "requests>=2.31",
    "matplotlib>=3.8",
    "contextily>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"
